tests/baselines/reference/parserSkippedTokens19.errors.txt
parserSkippedTokens19.ts(1,1): error TS1127: Invalid character.


==== parserSkippedTokens19.ts (1 errors) ====
    \ declare var v;
    
!!! error TS1127: Invalid character.